[package]
name = "gc_adpcm"
version = "0.1.0"
edition = "2021"
description = "Decoder for the ADPCM bitstream format used by Nintendo on the GameCube, Wii, and WiiU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kriskras99/gc_adpcm"
readme = "README.md"
keywords = ["adpcm", "decoder", "gamecube", "wii", "wiiu"]
categories = ["encoding", "multimedia::encoding", "parser-implementations"]

[dependencies]

[features]
default = ["std"]
std = []

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
as_conversions = "deny"
empty_structs_with_brackets = "deny"
get_unwrap = "deny"
lossy_float_literal = "deny"
missing_assert_message = "deny"
missing_panics_doc = "deny"
allow_attributes_without_reason = "deny"
missing_docs_in_private_items = "deny"
doc_markdown = "allow" # unreliable

[lints.rust]
missing_docs = "deny"
